# rusty-wordlet

./: Cargo.toml  Dockerfile  README.md  buildspec.yml
src/: main.rs  words.rs
