[package]
name = "rusty_wordlet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.6.0"
aws-sdk-dynamodb = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
thiserror = "1.0"
validator = { version = "0.14", features = ["derive"] }
http-api-problem = { version =  "0.51.0", features = ["hyper", "warp"] }